# verifactu-api-python

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  verifactu.conf
app/: __init__.py  models.py  verifactu.py
